style: fix spacing in scss

--- a/@uportal/content-carousel/src/components/ContentCarousel.scss
+++ b/@uportal/content-carousel/src/components/ContentCarousel.scss
@@ -26,12 +26,12 @@
   .slick-slide {
     width: 300px;
     margin: 0 10px;
-    border: 1px solid rgba(0,0,0,.125);
+    border: 1px solid rgba(0, 0, 0, 0.125);
   }
   
   .slick-title {
     padding-top: 10px;
-    border-top: 1px solid rgba(0,0,0,.125);
+    border-top: 1px solid rgba(0, 0, 0, 0.125);
     display: block;
     padding: 10px;
   }
